[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bear-mcp"
version = "0.1.0"
description = "MCP server for Bear notes management, invoice import, and yearly summaries"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pdfplumber>=0.10.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
bear-mcp = "bear_mcp.server:main"
